@@ -91,6 +91,7 @@ import java.util.SortedSet;
 import java.util.Spliterators;
 import java.util.TreeSet;
 import java.util.UUID;
+import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
@@ -115,6 +116,7 @@ import org.infrastructurebuilder.pathref.Checksum;
 import org.infrastructurebuilder.pathref.DigestReader;
 import org.infrastructurebuilder.pathref.IBChecksumUtils;
 import org.infrastructurebuilder.pathref.JSONOutputEnabled;
+import org.infrastructurebuilder.pathref.fs.PathRefFileAttributes;
 import org.json.JSONArray;
 import org.json.JSONObject;
 import org.slf4j.Logger;
@@ -182,14 +184,24 @@ public class IBUtils {
     return writer.toString();
   }
 
-  public final static Function<Path, Optional<BasicFileAttributes>> getAttributes = (i) -> {
-    Optional<BasicFileAttributes> retVal = empty();
+  public final static Function<Path, Optional<? extends BasicFileAttributes>> getBasicAttributes = (i) -> {
+    BasicFileAttributes retVal = null;
     try {
-      retVal = of(Files.readAttributes(requireNonNull(i), BasicFileAttributes.class));
+      retVal = Files.readAttributes(requireNonNull(i), BasicFileAttributes.class);
     } catch (IOException e) {
       // log.error("Error reading basic attributes " + i, e);
     }
-    return retVal;
+    return Optional.ofNullable(retVal);
+  };
+
+  public final static Function<Path,  Optional<PathRefFileAttributes>> getAttributes = (i) -> {
+    PathRefFileAttributes retVal = null;
+    try {
+      retVal = Files.readAttributes(requireNonNull(i), PathRefFileAttributes.class);
+    } catch (IOException | UnsupportedOperationException e) {
+      // log.error("Error reading basic attributes " + i, e);
+    }
+    return Optional.ofNullable(retVal);
   };
 
   public final static Function<String, Optional<Document>> strToDoc = (xmlString) -> {
@@ -221,8 +233,8 @@ public class IBUtils {
   public final static java.util.Comparator<java.time.Instant> nullSafeInstantComparator = nullsFirst(
       java.time.Instant::compareTo);
 
-  public final static Function<String, Optional<URL>> nullSafeURLMapper = (s) -> {
-    return ofNullable(s).map(u -> cet.returns(() -> translateToWorkableArchiveURL(u)));
+  public final static Function<String, Optional<URI>> nullSafeURLMapper = (s) -> {
+    return ofNullable(s).map(u -> cet.returns(() -> translateToWorkableArchiveURI(u)));
   };
 
   public final static Function<Object, Optional<String>> nullSafeObjectToString = (o) -> {
@@ -238,8 +250,8 @@ public class IBUtils {
     return p;
   };
 
-  public final static URL reURL(String url) {
-    return ofNullable(url).map(u -> cet.returns(() -> translateToWorkableArchiveURL(u))).orElse(null);
+  public final static URI reURL(String uri) {
+    return ofNullable(uri).map(u -> cet.returns(() -> translateToWorkableArchiveURI(u))).orElse(null);
   }
 
   public final static Function<JSONObject, JSONObject> cheapCopy = j -> {
@@ -363,9 +375,9 @@ public class IBUtils {
     return stream(iterable.spliterator(), false);
   }
 
-  public static final Optional<URL> asURL(final String url) {
+  public static final Optional<URI> asURI(final String uri) {
     try {
-      return Optional.of(translateToWorkableArchiveURL(url));
+      return Optional.of(translateToWorkableArchiveURI(uri));
     } catch (final IBException e) {
       return Optional.empty();
     }
@@ -609,8 +621,8 @@ public class IBUtils {
     return j;
   }
 
-  public static URL mapStringToURLOrNull(final Optional<String> urlString) {
-    return urlString.map(IBUtils::translateToWorkableArchiveURL).orElse(null);
+  public static URI mapStringToURIOrNull(final Optional<String> urlString) {
+    return urlString.map(IBUtils::translateToWorkableArchiveURI).orElse(null);
 
   }
 
@@ -769,24 +781,6 @@ public class IBUtils {
     return new JSONObject(readFile(jsonFile));
   }
 
-  public static JSONObject readToJSONObject(final InputStream ins) throws IOException {
-    return new JSONObject(readToString(requireNonNull(ins)));
-  }
-
-  public static String readToString(final InputStream ins) throws IOException {
-    return readToString(ins, UTF_8);
-  }
-
-  public static String readToString(final InputStream ins, final Charset charset) throws IOException {
-    final ByteArrayOutputStream result = new ByteArrayOutputStream();
-    final byte[] buffer = new byte[2048];
-    int length;
-    while ((length = ins.read(buffer)) != -1) {
-      result.write(buffer, 0, length);
-    }
-    return result.toString(charset.name());
-  }
-
   public static Map<String, String> splitToMap(final JSONObject json) {
     return json.toMap().entrySet().stream().collect(toMap(k -> k.getKey(), v -> v.getValue().toString()));
   }
@@ -832,9 +826,9 @@ public class IBUtils {
     return path;
   }
 
-  public static Optional<URL> zipEntryToUrl(final Optional<URL> p, final ZipEntry e) {
+  public static Optional<URI> zipEntryToUrl(final Optional<URI> p, final ZipEntry e) {
     return requireNonNull(p)
-        .map(u -> cet.returns(() -> translateToWorkableArchiveURL("jar:" + u.toExternalForm() + "!/" + e.getName())));
+        .map(u -> cet.returns(() -> translateToWorkableArchiveURI("jar:" + u.toString() + "!/" + e.getName())));
   }
 
   private static boolean _match(final JSONObject metadata, final Pattern key, final Pattern value) {
@@ -927,15 +921,15 @@ public class IBUtils {
   // _versionmatcher(art, pattern);
   // }
 
-  public static URL translateToWorkableArchiveURL(String url) {
-    requireNonNull(url);
-    String retVal = url;
-    if (url.startsWith("jar:") && !isJar)
-      retVal = "zip:" + url.substring(4);
-    if (url.startsWith("zip:") && !isZip)
-      retVal = "jar:" + url.substring(4);
+  public static URI translateToWorkableArchiveURI(String uri) {
+    requireNonNull(uri);
+    String retVal = uri;
+    if (uri.startsWith("jar:") && !isJar)
+      retVal = "zip:" + uri.substring(4);
+    if (uri.startsWith("zip:") && !isZip)
+      retVal = "jar:" + uri.substring(4);
     final String f = retVal;
-    return cet.returns(() -> new URL(f));
+    return cet.returns(() -> URI.create(f));
 
   }
 
